IC-Test/objects/SIC_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Business/Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CASE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Mfg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp&apos;s/Plastic/Rubber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric/Gas/Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household and Industrial Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Industries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmaceutical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary/Fab&apos;d Metal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <label>SIC Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>SIC Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SIC_Code__c</columns>
        <columns>Industry__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SIC Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SIC Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>